--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -107,9 +107,13 @@
                                 </td>
                                 <td>
                                     <div class="user-actions">
-                                        <a href="{{ url_for('user.profile', user_id=user.id) }}" 
+                                        <a href="{{ url_for('user.profile', user_id=user.id) }}"
                                            class="action-button" target="_blank">
                                             Ver
+                                        </a>
+                                        <a href="{{ url_for('admin.edit_user', user_id=user.id) }}"
+                                           class="action-button secondary">
+                                            Editar
                                         </a>
                                         {% if not user.is_admin %}
                                             <form action="{{ url_for('admin.toggle_admin', user_id=user.id) }}"
